# pico-fun

./: .gitmodules  LICENSE  README.md  onoff.c
c3bridge/: CMakeLists.txt  Makefile  c3bridge.c
cases/: README.md  whiteeeen_pico.scad  whiteeeen_pico.stl
